--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -15,11 +15,11 @@ div.tab-title .icon {
 }
 </style>
 <% end %>
-<section>
+<section class="pb0">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
-        <h4 class="uppercase mb80">MY ACCOUNT</h4>
+        <h4 class="uppercase mb24">MY ACCOUNT</h4>
         <div class="tabbed-content text-tabs">
           <ul class="tabs">
             <li class="active">
@@ -67,17 +67,15 @@ div.tab-title .icon {
       </div>
     </div>
   </div>
-
 </section>
 
 <section>
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h4 class="uppercase mb80">AMBASSADOR CONSOLE</h4>
+        <h4 class="uppercase mb24">AMBASSADOR CONSOLE</h4>
         <div class="tabbed-content button-tabs vertical">
           <ul class="tabs">
-
             <!-- Dashboard -->
             <li class="active">
               <div class="tab-title">
@@ -89,7 +87,6 @@ div.tab-title .icon {
                 <p>
                   Determine what may be useful/possible here
                 </p>
-
               </div>
             </li>
             <!-- /Dashboard -->
@@ -108,37 +105,35 @@ div.tab-title .icon {
                       <div class="row">
 
                         <%= form_tag send_referrals_path do %>
-                          <!-- Email-Referrals -->
-                          <div class="col-md-6">
-                            <div class="tab-title">
-                              <i class="icon ti-email"></i>
-                              <span>E-mail</span>
-                            </div>
-                            <%= text_field_tag :email_refers, '', id:'tags_email_refers' %>
+                        <!-- Email-Referrals -->
+                        <div class="col-md-6">
+                          <div class="tab-title">
+                            <i class="icon ti-email"></i>
+                            <span>E-mail</span>
                           </div>
-                          <!-- /Email-Referrals -->
+                          <%= text_field_tag :email_refers, '', id:'tags_email_refers' %>
+                        </div>
+                        <!-- /Email-Referrals -->
 
-                          <!-- Phone-Referrals -->
-                          <div class="col-md-6">
-                            <div class="tab-title">
-                              <i class="icon ti ti-mobile"></i>
-                              <span>TEXT</span>
-                            </div>
-                            <%= text_field_tag :text_refers, '', id:'tags_text_refers' %>
+                        <!-- Phone-Referrals -->
+                        <div class="col-md-6">
+                          <div class="tab-title">
+                            <i class="icon ti ti-mobile"></i>
+                            <span>TEXT</span>
                           </div>
-                          <!-- /Phone-Referrals -->
+                          <%= text_field_tag :text_refers, '', id:'tags_text_refers' %>
+                        </div>
+                        <!-- /Phone-Referrals -->
 
-                          <p class="help-block">Enter The Email Addresses or Phone Numbers You'd Like To Invite</p>
+                        <p class="help-block">Enter The Email Addresses or Phone Numbers You'd Like To Invite</p>
 
-                          <div class="col-md-12">
-                            <%= submit_tag "Invite" %>
-                          </div>
+                        <div class="col-md-12">
+                          <%= submit_tag "Invite" %>
+                        </div>
                         <% end %>
                       </div>
                     </div>
                   </div>
-                </p>
-                <p>
                 </p>
               </div>
             </li>
@@ -150,7 +145,6 @@ div.tab-title .icon {
                 <span>MY PEOPLE</span>
               </div>
               <div class="tab-content">
-
                 <h5 class="uppercase">Prospects & Successes</h5>
                 <hr>
                 <div class="container">
@@ -176,27 +170,19 @@ div.tab-title .icon {
                       </div>
                     </div>
                   </div>
-                </li>
-              </ul>
-            </div>
-          </div>
+                </div>
+              </div>
+            </li>
+            <!-- /My People -->
+          </ul>
         </div>
       </div>
     </div>
-  </li>
-  <!-- /My People -->
-
-  <!-- My Account -->
-
-</div>
-</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
+  </div>
 </section>
 
+
+<!--
 <section>
   <div class="container">
     <div class="row">
@@ -320,6 +306,7 @@ div.tab-title .icon {
     </div>
   </div>
 </section>
+-->
 
 <%= content_for :js_includes do %>
 <%= javascript_include_tag 'flexslider.min.js', 'data-turbolinks-track' => true %>
