--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
 
   <%= render partial: 'layouts/header' %>
 
+  <%- if false %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+  <% end %>
 
   <div class="main-container">
     <%= yield %>
