--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -147,30 +147,41 @@ div.tab-title .icon {
               <div class="tab-content">
                 <h5 class="uppercase">Prospects & Successes</h5>
                 <hr>
-                <div class="container">
+                <p>
                   <div class="row">
-                    <div class="col-md-3 col-sm-4">
+                    <!-- Prospects -->
+                    <div class="col-md-4 col-md-offset-1">
                       <div class="widget">
-                        <h6 class="title">Prospects</h6>
+                        <h6 class="title text-center">Prospects</h6>
                         <hr>
                         <ul class="link-list">
-                          <li>
-                            <a href="#">John Smith</a>
-                          </li>
-                          <li>
-                            <a href="#">Eric Clapton</a>
-                          </li>
-                          <li>
-                            <a href="#">Kareem Abdul Jabar</a>
-                          </li>
-                          <li>
-                            <a href="#">Roy Mcllroy</a>
-                          </li>
+                          <%- @child_prospects.each do |cp| %>
+                            <li>
+                              <a href="#"><%= display_child_label(cp) %></a>
+                            </li>
+                          <% end -%>
                         </ul>
                       </div>
                     </div>
+                    <!-- /Prospects -->
+
+                    <!-- Successes -->
+                    <div class="col-md-4 col-md-offset-1">
+                      <div class="widget">
+                        <h6 class="title text-center">Successes</h6>
+                        <hr>
+                        <ul class="link-list">
+                          <%- @child_successes.each do |cs| %>
+                            <li>
+                              <a href="#"><%= cs.full_name %></a>
+                            </li>
+                          <% end -%>
+                        </ul>
+                      </div>
+                    </div>
+                    <!-- /Successes -->
                   </div>
-                </div>
+                </p>
               </div>
             </li>
             <!-- /My People -->
