--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,4 +34,10 @@
 
   <%= yield :js_includes %>
 </body>
+
+<div>
+  <%= debug(params) if Rails.env.development? %>
+  <%= console if Rails.env.development? %>
+</div>
+
 </html>
