--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -149,6 +149,8 @@ div.tab-title .icon {
                 <div class="container">
                   <div class="row">
                     <div class="col-md-3 col-sm-4">
+                    <ul>
+                      <li>
                       <div class="widget">
                         <h6 class="title">Prospects</h6>
                         <hr>
@@ -166,7 +168,33 @@ div.tab-title .icon {
                             <a href="#">Roy Mcllroy</a>
                           </li>
                         </ul>
+                       </li>
+                       </ul>
                       </div>
+                      <div class="col-md-3 col-sm-4">
+                      <ul>
+                        <li>
+                        <div class="widget">
+                          <h6 class="title">Registered</h6>
+                          <hr>
+                          <ul class="link-list">
+                            <li>
+                              <a href="#">John Smith</a>
+                            </li>
+                            <li>
+                              <a href="#">Eric Clapton</a>
+                            </li>
+                            <li>
+                              <a href="#">Kareem Abdul Jabar</a>
+                            </li>
+                            <li>
+                              <a href="#">Roy Mcllroy</a>
+                            </li>
+                          </ul>
+                         </li>
+                         </ul>
+                        </div>
+
                     </div>
                   </div>
                 </li>
