list of children is accordion of info

--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -170,6 +170,42 @@ div.tab-title .icon {
                       <div class="widget">
                         <h6 class="title text-center">Successes</h6>
                         <hr>
+                        <div class="col-sm-6">
+                            <h5 class="uppercase mb40">One At A Time</h5>
+                            <ul class="accordion accordion-2 one-open">
+                                <li class="active">
+                                    <div class="title">
+                                        <span>Simple Panels</span>
+                                    </div>
+                                    <div class="content">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="title">
+                                        <span>Toggle Information</span>
+                                    </div>
+                                    <div class="content">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="title">
+                                        <span>Nice Touch</span>
+                                    </div>
+                                    <div class="content">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <!--end of accordion-->
+                        </div>
                         <ul class="link-list">
                           <%- @child_successes.each do |cs| %>
                             <li>
