--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 
 <div>
   <%= debug(params) if Rails.env.development? %>
-  <%= console if Rails.env.development? %>
+  <%#= console if Rails.env.development? %>
 </div>
 
 </html>
