--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -14,7 +14,7 @@
 
 </style>
 <% end %>
-<section class="pb0">
+<section id="my-account" class="pb0">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
@@ -68,7 +68,7 @@
   </div>
 </section>
 
-<section>
+<section id="ambassador-console">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -76,7 +76,7 @@
         <div class="tabbed-content button-tabs vertical">
           <ul class="tabs">
             <!-- Dashboard -->
-            <li class="active">
+            <li id="dashboard" class="active">
               <div class="tab-title">
                 <span>DASHBOARD</span>
               </div>
