fix lightbox url + ajax loading gif

--- a/app/assets/stylesheets/ambassadors.scss
+++ b/app/assets/stylesheets/ambassadors.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the Ambassadors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#spread-the-word div.tagsinput {
+  height:auto!important;
+}
+#spread-the-word div.tab-title {
+  height:50px;
+}
+#spread-the-word div.tab-title .icon {
+  font-size:32px;
+}
+
+/* custom accordion css */
+#my-people .accordion-2 .title {
+  color: #f9ad19;
+  font-weight: 600;
+  font-size: 13px;
+  border-bottom-style: dashed;
+
+  margin-bottom: 0;
+}
+
+#my-people .accordion-2 li.active .content {
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 16px;
+
+  border-left: 1px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
+  border-right: 1px dashed #ccc;
+}
+
+#my-people form {
+  padding-bottom: 8px;
+}
+#my-people div input {
+  height: 35px;
+}
+#my-people div.input-r {
+  padding-right: 3px;
+}
+#my-people div.input-l {
+  padding-left: 3px;
+}
+#my-people .group-elem {
+  margin-bottom: 5px!important;
+}
+#my-people .btn-div {
+  margin-left: 76.5%;
+  margin-right: 0;
+}
+#my-people .btn-div {
+  margin-left: 76%;
+  margin-bottom: 8px;
+}
+#my-people .btn-div button i {
+  font-weight: 600;
+}
+
+/* AJAX Overlay */
+.content-ajax {
+  background-color:#fff;
+  opacity:0.1;
+}
