--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -147,7 +147,7 @@
                               <div class="title">
                                 <span><%= display_child_label(cp) %></span>
                               </div>
-                              <div id="<%= cp.id %>" class="content">
+                              <div id="child-<%= cp.id %>" class="content">
                                 <%= render partial: 'ambassadors/prospect', locals: { cp: cp } %>
                               </div>
                             </li>
