edit prospects working pretty well

--- a/app/views/ambassadors/_prospect.html.erb
+++ b/app/views/ambassadors/_prospect.html.erb
@@ -17,7 +17,7 @@
         <%= f.text_field :lname, placeholder: 'Last Name', value: cp.lname, class:'group-elem' %>
       </div>
     </div>
-    <div class="col-xs-4 btn-div">
+    <div class="col-md-4 btn-div">
       <%= button_tag(type: 'submit') do %>
         <i class="ti-save"> Save</i>
       <% end %>
