--- a/app/assets/stylesheets/ambassadors.scss
+++ b/app/assets/stylesheets/ambassadors.scss
@@ -64,12 +64,17 @@
 #overlay-ajax {
   position: absolute;
   width: 100%;
+  height:100%;
   top: 0;
   left:0;
-  padding-bottom:16px;
+  background: rgba(255, 255, 255, 0.8);
   z-index: 1001;
 }
 #overlay-ajax img.loading-gif {
-  opacity:0.8;
   z-index: 1002;
+  position: relative;
+  top:50%;
+  left:50%;
+  margin-top:-62px;
+  margin-left:-83px;
 }
