--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -148,7 +148,7 @@
                                 <span><%= display_child_label(cp) %></span>
                               </div>
                               <div id="child-<%= cp.id %>" class="content">
-                                <%= render partial: 'ambassadors/prospect', locals: { cp: cp } %>
+                                <%= render partial: 'ambassadors/prospect', locals: { child: cp } %>
                               </div>
                             </li>
                           <% end -%>
@@ -162,10 +162,15 @@
                       <div class="widget">
                         <h6 class="title text-center">Successes</h6>
                         <hr>
-                        <ul class="link-list">
+                        <ul class="accordion accordion-2">
                           <%- @child_successes.each do |cs| %>
                             <li>
-                              <a href="#"><%= cs.full_name %></a>
+                              <div class="title">
+                                <span><%= cs.full_name %></span>
+                              </div>
+                              <div id="child-<%= cs.id %>" class="content">
+                                <%= render partial: 'ambassadors/success', locals: { child: cs } %>
+                              </div>
                             </li>
                           <% end -%>
                         </ul>
