--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav>
     <div class="nav-bar">
       <div class="module left">
-        <%= link_to "/" do %>
+        <%= link_to root_path do %>
           <%= image_tag 'logo-light.png', class: 'logo logo-light', alt: 'Foundry' %>
           <%= image_tag 'logo-dark.png', class: 'logo logo-dark', alt: 'Foundry' %>
         <% end %>
