--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -41,10 +41,10 @@
 
                 <p class="group-tag">Identity</p>
                 <div class="row">
-                  <div class="col-sm-8">
+                  <div class="col-sm-7">
                     <%= f.email_field :email, placeholder: "Email Address", autofocus: true, class:"group-elem", value: @ambassador.email %>
                   </div>
-                  <div class="col-sm-4">
+                  <div class="col-sm-5">
                     <%= ff.telephone_field :phone, placeholder: "Phone Number", class:"group-elem" %>
                   </div>
                 </div>
@@ -59,12 +59,12 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-sm-8">
+                  <div class="col-sm-5">
                     <%= ff.text_field :dob, placeholder: 'Date of Birth', data: { provide: 'datepicker', 'date-format': 'yyyy-mm-dd', 'date-end-date': "+0d", 'date-start-view': 2 } %>
                   </div>
-                  <div class="col-sm-4">
-                    <%= ff.text_field :ssn_last_4, placeholder: "Last Four Digits of your Social Security Number", class:"group-elem" %>
-                    <p class="help-block">This is used to verify your back account information and is not stored on our server</p>
+                  <div class="col-sm-7">
+                    <%= text_field_tag :ssn_last_4, '', placeholder: "Last 4 Of SSN", class:"group-elem" %>
+                    <p class="help-block">This is used to verify your bank account information and is not stored on our server</p>
                   </div>
                 </div>
 
