--- a/app/views/ambassadors/update_prospect.js.erb
+++ b/app/views/ambassadors/update_prospect.js.erb
@@ -1,7 +1,16 @@
-$("#child-<%= child.id.to_s %>").append("<div id='overlay-ajax'><img src=<%= asset_path('loading.gif') %> class='loading-gif' alt='loading' /></div>");
-
+var finishLoadFade = function(){
+  $('#overlay-ajax').remove()
+}
 var finishLoad = function(){
-  $('#overlay-ajax').remove();
+  $('#overlay-ajax').fadeOut(500, finishLoadFade);
 };
 
+var finishFade = function(){
+  $("#title-<%= child.id.to_s %>").html("<%= display_child_label(child) %>").fadeIn(500);
+}
+
+/* loading ajax gif */
+$("#child-<%= child.id.to_s %>").append($("<div id='overlay-ajax'><img src=<%= asset_path('loading.gif') %> class='loading-gif' alt='loading' /></div>").hide().fadeIn(500));
+/* fade out/in to change title */
+$("#title-<%= child.id.to_s %>").fadeOut(500, finishFade);
 setTimeout(finishLoad, 1500);
