--- a/app/assets/stylesheets/ambassadors.scss
+++ b/app/assets/stylesheets/ambassadors.scss
@@ -43,7 +43,7 @@
 #my-people div input {
   height: 35px;
 }
-#my-people div input[readonly] {
+#my-people .prospect div input[readonly] {
   font-weight: bold;
   background: transparent;
 }
