--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -142,7 +142,7 @@
                       <div class="widget">
                         <h6 class="title text-center">Prospects</h6>
                         <hr>
-                        <ul class="accordion accordion-2">
+                        <ul class="prospect accordion accordion-2">
                           <%- @child_prospects.each do |cp| %>
                             <li>
                               <div class="title">
@@ -163,7 +163,7 @@
                       <div class="widget">
                         <h6 class="title text-center">Successes</h6>
                         <hr>
-                        <ul class="accordion accordion-2">
+                        <ul class="success accordion accordion-2">
                           <%- @child_successes.each do |cs| %>
                             <li>
                               <div class="title">
